contactAction layout bug

--- a/ghostgram hybrid/styles/master.less
+++ b/ghostgram hybrid/styles/master.less
@@ -1698,6 +1698,7 @@ div.footerMenu.km-footer > ul > li > a:active {
   		margin-right: 10%;
   		text-align: center;
   		margin-top: 0.5rem;
+  		margin-bottom: 0.5rem;
   		font-size: 1.5em !important;
 	}
 }
